<resources>
    <string name="app_name">CarmenSanDiego</string>
    <string name="que_vamos_a_hacer_ahora_detective">Que vamos a hacer ahora detective?</string>
    <string name="resolver_misterio">Resolver misterio</string>
    <string name="mapamundi">Mapamundi</string>
    <string name="files">Files</string>
    <string name="emitir_orden_contra">Emitir orden contra:</string>
    <string name="orden_de_arresto">Orden de arresto</string>
    <string name="orden_de_arresto_contra">Orden de arresto contra:</string>
    <string name="viajar">Viajar</string>
    <string name="pedir_pista">Pedir pista</string>
    <string name="destinos_recorridos">Destinos recorridos</string>
    <string name="emitir_orden">Emitir orden</string>

    <string-array name="villains_array">
        <item>Carmen San Diego</item>
        <item>Igor Igorvich</item>
        <item>Vic La Mancha</item>
    </string-array>

    <string-array name="connections_array">
        <item>Alemania</item>
        <item>Espania</item>
        <item>Italia</item>
    </string-array>
</resources>
