<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ar.edu.unq.uis.carmensandiego.CarmenActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/que_vamos_a_hacer_ahora_detective"
            android:textSize="20sp"/>
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/buttonResolverMisterio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resolver_misterio"
            android:onClick="buttonResolverMisterio_onClick"/>

        <Button
            android:id="@+id/buttonMapamundi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mapamundi"/>

        <Button
            android:id="@+id/buttonFiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/files" />


    </LinearLayout>

</LinearLayout>
