<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedir_pista"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/firstPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonPlaceClueOnClick"/>


    <Button
        android:id="@+id/secondPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonPlaceClueOnClick"/>

    <Button
        android:id="@+id/thirdPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonPlaceClueOnClick"/>
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="30sp" />

    <TextView
        android:id="@+id/currentPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/showClue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viajar"
            android:onClick="buttonViajarOnClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orden_de_arresto"
            android:onClick="buttonEmitirOrdenOnClick"/>

    </LinearLayout>

</LinearLayout>